--- a/index.html
+++ b/index.html
@@ -5,30 +5,40 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
-        <title>JS-Arrow-Object-Carousel</title>
+        <title>Vue Slider</title>
     </head>
     <body>
-        <div class="container">
-            <div class="button-container">
-                <button id="reverse">Reverse</button>
-                <button id="start">Start</button>
-                <button id="stop">Stop</button>
-            </div>
-            <div class="slider">
-                <div class="item-left"></div>
-                <div class="item-slider">
-                    <div class="arrow prev">&uarr;</div>
-                    <div class="arrow next">&darr;</div>
+        <div id="app">
+            <div class="container">
+                <div class="button-container">
+                    <button id="reverse">Reverse</button>
+                    <button id="start">Start</button>
+                    <button id="stop">Stop</button>
+                </div>
+                <div class="slider">
+                    <div class="item-left">
+                        <div class="main-image">
+                            <img :src="array[item_active].url_image">
+                        </div>
+                    </div>
+                    <div class="item-slider">
+                        <div class="item" :class="(item_active == index) ? 'active' : ''" v-for="(image, index) in array">
+                            <img :src="image.url_image">
+                        </div>
+                        <div class="arrow prev">&uarr;</div>
+                        <div class="arrow next">&darr;</div>
+                    </div>
+                </div>
+                <div class="circles-container">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
                 </div>
             </div>
-            <div class="circles-container">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
         </div>
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
