--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <div class="item" :class="(item_active == index) ? 'active' : ''" v-for="(image, index) in array">
                             <img :src="image.url_image">
                         </div>
-                        <div class="arrow prev">&uarr;</div>
-                        <div class="arrow next">&darr;</div>
+                        <div class="arrow prev" @click="goToPreviousSlides">&uarr;</div>
+                        <div class="arrow next" @click="goToNextSlides">&darr;</div>
                     </div>
                 </div>
                 <div class="circles-container">
