--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 <div class="slider">
                     <div class="item-left">
                         <div class="main-image" @mouseover="stopAutoplay" @mouseleave="startAutoplay">
-                            <img :src="array[item_active].url_image">
+                            <img :src="array[item_active].url_image" :alt="array[item_active].url_image">
+                            <div class="caption">
+                                <h3>{{ array[item_active].title }}</h3>
+                                <p>{{ array[item_active].description }}</p>
+                            </div>
                         </div>
                     </div>
                     <div class="item-slider">
